# Lakehouse

./: .gitignore  pyproject.toml
src/: docker-compose-main.yml
src/Apache_Kafka/: kafka.yml
src/Apache_Spark/: docker-compose.yml  spark.yml
src/Apache_Spark/apps/: ETL_clean_to_curated.py  ETL_raw_to_clean.py  clean_data_model.py  curated_data_model.py  daily_update_clean_to_curated.py  daily_update_raw_to_clean.py  dim_date.py  initial_load_clean_to_curated.py  initial_load_raw_to_clean.py  read_minio_jsonl.py  test.py  test_pyspark.py
src/Apache_Spark/docker_client/: Dockerfile  requirement_spark_client.txt
src/MinIO/: MinIO.yml
src/Monitoring/: docker-compose.yml  monitoring.yml
src/Monitoring/alertmanager/: alertmanager.yml
src/Monitoring/prometheus/: prometheus.yml
src/Nessie/: nessie.sh  nessie.yml
src/Trino/: docker-compose.yml  trino.yml
src/Web_scraping/: chrome.yml  content_VnExpress_cat3.json  content_VnExpress_cat5.json
src/Web_scraping/CrawlJob/: __init__.py  get_content_news.py  get_data_article_VnExpress.py  get_links.py
src/Web_scraping/CrawlPackage/: __init__.py  crawl_VnExpress.py  get_links.py
src/Web_scraping/SeleniumPackage/: __init__.py  brower_no_ui.py  brower_ui.py  navigation.py
src/Web_scraping_selenium/CrawlJob/: test_platform.py
src/Web_scraping_selenium/ScarpingPackage/: brower_no_ui.py  brower_ui.py  navigation.py
src/airflow/: airflow.yml
src/airflow/config/: airflow.cfg
src/airflow/dags/: crawl_daily.py  crawl_news_daily.py  crawl_news_history.py  crawl_range_time.py  etl_clean_to_curated.py  (+1 more)
src/metabase/: metabase.yml
(+32 files in other folders)
