[project]
name = "Lakehouse"
version = "0.1.0"
description = "This project for Lakehouse architecture"
authors = [
    { name="Nguyen Phuc Linh", email="nguyenphuclinh1208@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "dlt[duckdb,sql-database]==1.9.0",
	"pymongo==4.12.0",
    "dbt-core==1.9.4",
    "dbt-postgres==1.9.0",
    "pandas==1.5.3",
    "numpy==1.24.2",
    "requests==2.28.2",
    "streamlit==1.44.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
