[project]
name = "Lakehouse"
version = "0.1.0"
description = "This project for Lakehouse architecture"
authors = [
    { name="Nguyen Phuc Linh", email="nguyenphuclinh1208@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    # Crawl data
    "requests==2.32.3",
	"selenium==4.31.0",
	"beautifulsoup4==4.13.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
